[gd_scene load_steps=5 format=3 uid="uid://c8yhy8pvwt33b"]

[ext_resource type="Script" uid="uid://du02skfat0cig" path="res://scripts/hud_handler.gd" id="1_15n47"]

[sub_resource type="LabelSettings" id="LabelSettings_5f3yu"]
font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_sfuq3"]
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_15n47"]
font_size = 23

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_15n47")

[node name="GlobalUpgradesMenu" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.8
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2

[node name="Panel" type="Panel" parent="GlobalUpgradesMenu"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GlobalUpgradesMenu"]
layout_mode = 2

[node name="Label" type="Label" parent="GlobalUpgradesMenu/VBoxContainer"]
layout_mode = 2
text = "Global Upgrades"
label_settings = SubResource("LabelSettings_5f3yu")
horizontal_alignment = 1

[node name="CoreHealthUpgrade" type="Button" parent="GlobalUpgradesMenu/VBoxContainer"]
layout_mode = 2
text = "MORE ENERGY
core health +150"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5

[node name="Resources" type="Control" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Resources"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -38.0
offset_top = -50.0
grow_horizontal = 0
grow_vertical = 0
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/Resources/VBoxContainer"]
layout_mode = 2
text = "Packets"
label_settings = SubResource("LabelSettings_sfuq3")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Packet_display" type="Label" parent="MarginContainer/Resources/VBoxContainer"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_15n47")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="MarginContainer2"]
layout_mode = 2

[node name="WaveDisplay" type="Label" parent="MarginContainer2/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Wave: 0"

[node name="Toolbar" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="Toolbar"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Toolbar/Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -8.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 0

[node name="turret" type="Button" parent="Toolbar/Control/HBoxContainer"]
layout_mode = 2
text = "turret"

[node name="wall" type="Button" parent="Toolbar/Control/HBoxContainer"]
layout_mode = 2
text = "wall"

[node name="CoreHealthContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0

[node name="Label" type="Label" parent="CoreHealthContainer"]
layout_mode = 2

[connection signal="pressed" from="GlobalUpgradesMenu/VBoxContainer/CoreHealthUpgrade" to="." method="_on_core_health_upgrade_pressed"]
[connection signal="mouse_entered" from="Toolbar/Control/HBoxContainer" to="." method="_on_h_box_container_mouse_entered"]
[connection signal="mouse_exited" from="Toolbar/Control/HBoxContainer" to="." method="_on_h_box_container_mouse_exited"]
[connection signal="mouse_entered" from="Toolbar/Control/HBoxContainer/turret" to="." method="_on_turret_mouse_entered"]
[connection signal="mouse_exited" from="Toolbar/Control/HBoxContainer/turret" to="." method="_on_turret_mouse_exited"]
[connection signal="pressed" from="Toolbar/Control/HBoxContainer/turret" to="." method="_on_turret_pressed"]
[connection signal="mouse_entered" from="Toolbar/Control/HBoxContainer/wall" to="." method="_on_wall_mouse_entered"]
[connection signal="mouse_exited" from="Toolbar/Control/HBoxContainer/wall" to="." method="_on_wall_mouse_exited"]
[connection signal="pressed" from="Toolbar/Control/HBoxContainer/wall" to="." method="_on_wall_pressed"]
